--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ main {
     justify-content: space-between;
 }
 
-#markdown, #preview-container {
+#markdown, #preview {
     width: 45%;
     height: 100%;
     border: 5px solid black;
@@ -38,6 +38,6 @@ main {
     font-size: 150%;
 }
 
-#preview-container {
+#preview {
     margin-right: 2%;
 }
